worked on report

--- a/report/references.bib
+++ b/report/references.bib
@@ -5,3 +5,29 @@
   year={2014},
   organization={BMVC 2014}
 }
+
+@ARTICLE{lpd08dvs, 
+	author={Lichtsteiner, P. and Posch, C. and Delbruck, T.}, 
+	journal={Solid-State Circuits, IEEE Journal of}, 
+	title={A 128 $\times$ 128 120 dB 15 $\mu$s Latency Asynchronous Temporal Contrast Vision Sensor}, 
+	year={2008}, 
+	month={Feb}, 
+	volume={43}, 
+	number={2}, 
+	pages={566-576},
+	doi={10.1109/JSSC.2007.914337}, 
+	ISSN={0018-9200},
+}
+
+@ARTICLE{brandli14davis, 
+	author={Brandli, C. and Berner, R. and Minhao Yang and Shih-Chii Liu and Delbruck, T.}, 
+	journal={Solid-State Circuits, IEEE Journal of}, 
+	title={A 240 $\times$ 180 130 dB 3 $\mu$s Latency Global Shutter Spatiotemporal Vision Sensor}, 
+	year={2014}, 
+	month={Oct}, 
+	volume={49}, 
+	number={10}, 
+	pages={2333-2341}, 
+	doi={10.1109/JSSC.2014.2342715}, 
+	ISSN={0018-9200},
+}
