worked on report

--- a/report/references.bib
+++ b/report/references.bib
@@ -31,3 +31,10 @@
 	doi={10.1109/JSSC.2014.2342715}, 
 	ISSN={0018-9200},
 }
+
+@MISC{raskarpoisson,
+	title = "Matlab Code for Poisson Image Reconstruction from Image Gradients",
+	year = "2015",
+	howpublished="\url{http://web.media.mit.edu/~raskar/photo/code.pdf}",
+	note = "[Online; accessed 07-March-2015]",
+}
