--- a/report/sections/results.tex
+++ b/report/sections/results.tex
@@ -4,3 +4,9 @@
 \includegraphics[width=\columnwidth]{images/zigzag_reconstruction.png}
 \caption{// TODO}
 \end{figure}
+
+\begin{figure}
+\label{fig:shutter_integration}
+\includegraphics[width=\linewidth]{images/PCLab_integrated.png}
+\caption{// TODO}
+\end{figure}
