added some references for related work

--- a/report/references.bib
+++ b/report/references.bib
@@ -38,3 +38,23 @@
 	howpublished="\url{http://web.media.mit.edu/~raskar/photo/code.pdf}",
 	note = "[Online; accessed 07-March-2015]",
 }
+
+@inproceedings {vmv.20141280,
+booktitle = {Vision, Modeling \& Visualization},
+editor = {Jan Bender and Arjan Kuijper and Tatiana von Landesberger and Holger Theisel and Philipp Urban},
+title = {{High-Speed Object Tracking Using an Asynchronous Temporal Contrast Sensor}},
+author = {Saner, Daniel and Wang, Oliver and Heinzle, Simon and Pritch, Yael and Smolic, Aljoscha and Sorkine-Hornung, Alexander and Gross, Markus},
+year = {2014},
+publisher = {The Eurographics Association},
+ISBN = {978-3-905674-74-3},
+DOI = {10.2312/vmv.20141280}
+}
+
+@inproceedings{mueggler2014event,
+  title={Event-based, 6-DOF pose tracking for high-speed maneuvers},
+  author={Mueggler, Elias and Huber, Basil and Scaramuzza, Davide},
+  booktitle={Intelligent Robots and Systems (IROS 2014), 2014 IEEE/RSJ International Conference on},
+  pages={2761--2768},
+  year={2014},
+  organization={IEEE}
+}
