--- a/report/report.tex
+++ b/report/report.tex
@@ -64,10 +64,12 @@ ETH Zurich\\
 
 // TODO - insert related work here
 
--Kim \etal\\
--Scaramuzza\\
--\cite{lpd08dvs}\\
--vSLAM?\\
+\begin{itemize}
+\item DVS \cite{lpd08dvs}
+\item Simulteneous Mosaicing and tracking \cite{kim2014simultaneous}
+\item object tracking \cite{vmv.20141280}
+\item Scaramuzza pose tracking \cite{mueggler2014event}
+\end{itemize}
 
 \section{Dynamic Vision Sensors}
 
