added related work section

--- a/report/references.bib
+++ b/report/references.bib
@@ -58,3 +58,12 @@ DOI = {10.2312/vmv.20141280}
   year={2014},
   organization={IEEE}
 }
+
+@inproceedings{conradt2009embedded,
+  title={An embedded AER dynamic vision sensor for low-latency pole balancing},
+  author={Conradt, Jorg and Berner, Raphael and Cook, Matthew and Delbruck, Tobi},
+  booktitle={Computer Vision Workshops (ICCV Workshops), 2009 IEEE 12th International Conference on},
+  pages={780--785},
+  year={2009},
+  organization={IEEE}
+}
