--- a/report/sections/simulation.tex
+++ b/report/sections/simulation.tex
@@ -4,7 +4,7 @@ each part of the algorithm independently with perfect input data and ground
 truth. It also makes experimentation easier as everything can be inspected at
 will.
 
-The simulation starts off with a normal image containing a 360 \degree panorama. The field of view of the camera is computed given its orientation (normal Euler angles) and the panorama image (the ground truth map) is sampled using raycasting. The camera is then rotated by a tiny amount to get a second image patch. These patches are then subtracted to get a list of events.
+The simulation starts off with a normal image containing a 360 degree panorama. The field of view of the camera is computed given its orientation (normal Euler angles) and the panorama image (the ground truth map) is sampled using raycasting. The camera is then rotated by a tiny amount to get a second image patch. These patches are then subtracted to get a list of events.
 
 // TODO insert section to explain camera simulation
 
