added related work

--- a/report/report.tex
+++ b/report/report.tex
@@ -6,7 +6,6 @@
 \usepackage{graphicx}
 \usepackage{amsmath}
 \usepackage{amssymb}
-\usepackage{hyperref}
 \usepackage{textcomp}
 
 % Include other packages here, before hyperref.
@@ -14,7 +13,7 @@
 % If you comment hyperref and then uncomment it, you should delete
 % egpaper.aux before re-running latex.  (Or just hit 'q' on the first latex
 % run, let it finish, and you should be clear).
-%\usepackage[pagebackref=true,breaklinks=true,letterpaper=true,colorlinks,bookmarks=false]{hyperref}
+\usepackage[pagebackref=true,breaklinks=true,letterpaper=true,colorlinks,bookmarks=false]{hyperref}
 
 \cvprfinalcopy % *** Uncomment this line for the final submission
 
@@ -63,12 +62,7 @@ ETH Zurich\\
 %-------------------------------------------------------------------------
 \section{Related Work}
 
-// TODO - insert related work here
-
--Kim \etal\\
--Scaramuzza\\
--\cite{lpd08dvs}\\
--vSLAM?\\
+\input{sections/related_work.tex}
 
 %-------------------------------------------------------------------------
 \section{Dynamic Vision Sensors}
@@ -93,21 +87,17 @@ ETH Zurich\\
 
 %-------------------------------------------------------------------------
 \section{Core Algorithm}
-
 \input{sections/core_algorithm.tex}
 
 \subsection{Rotation Tracking}
-
 \input{sections/tracking.tex}
 
 \subsection{Scene Reconstruction}
-
 \input{sections/scene_reconstruction.tex}
 
 
 %-------------------------------------------------------------------------
 \section{Problems}
-
 // TODO - insert section about problems
 
 -map initialization\\
@@ -118,13 +108,11 @@ $\rightarrow$ couldn't test with camera\\
 
 %-------------------------------------------------------------------------
 \section{Experiments}
-
 \input{sections/experiments.tex}
 
 
 %-------------------------------------------------------------------------
 \section{Results}
-
 \input{sections/results.tex}
 
 
