Add section about multiple hypotheses in tracking.

--- a/report/sections/results.tex
+++ b/report/sections/results.tex
@@ -1,6 +1,6 @@
 \begin{figure}
 \includegraphics[width=\columnwidth]{images/zigzag_input.png}
 \includegraphics[width=\columnwidth]{images/zigzag_reconstruction.png}
-\caption{// TODO}
+\caption{result of full algorithm running in simulation}
 \label{fig:zigzag_reconstruction}
 \end{figure}
