added section labels + some references

--- a/report/report.tex
+++ b/report/report.tex
@@ -56,21 +56,21 @@ ETH Zurich\\
 
 %%%%%%%%% BODY TEXT
 \section{Introduction}
-
+\label{sec:introduction}
 // TODO - insert introduction here
 
 %-------------------------------------------------------------------------
 \section{Related Work}
-
+\label{sec:related_work}
 \input{sections/related_work.tex}
 
 %-------------------------------------------------------------------------
 \section{Dynamic Vision Sensors}
-
+\label{sec:dvs}
 \input{sections/dvs.tex}
 
 \section{Our Work}
-
+\label{sec:our_work}
 // TODO - insert section to explain what we did here
 // TODO - move core algorithm section before this?
 
@@ -80,24 +80,28 @@ ETH Zurich\\
     -start with first fov in map\\
 
 \subsection{Camera Simulation}
-
+\label{sec:simulation}
 \input{sections/simulation.tex}
 
 
 
 %-------------------------------------------------------------------------
 \section{Core Algorithm}
+\label{sec:core_algorithm}
 \input{sections/core_algorithm.tex}
 
 \subsection{Rotation Tracking}
+\label{sec:tracking}
 \input{sections/tracking.tex}
 
 \subsection{Scene Reconstruction}
+\label{sec:scene_reconstruction}
 \input{sections/scene_reconstruction.tex}
 
 
 %-------------------------------------------------------------------------
 \section{Problems}
+\label{sec:problems}
 // TODO - insert section about problems
 
 -map initialization\\
@@ -108,11 +112,13 @@ $\rightarrow$ couldn't test with camera\\
 
 %-------------------------------------------------------------------------
 \section{Experiments}
+\label{sec:experiments}
 \input{sections/experiments.tex}
 
 
 %-------------------------------------------------------------------------
 \section{Results}
+\label{sec:results}
 \input{sections/results.tex}
 
 
