--- a/report/sections/core_algorithm.tex
+++ b/report/sections/core_algorithm.tex
@@ -21,5 +21,4 @@ movement is tracked correctly.
 
 This is not an unreasonable assumption, as never DVS models incorporate the
 ability to take full-frame pictures and a simple method for generating full
-images can be used with any model (see Section about Experiments [TODO:
-reference]).
+images can be used with any model (see Section \ref{sec:experiments}).
