--- a/report/sections/results.tex
+++ b/report/sections/results.tex
@@ -1,6 +1,9 @@
 \begin{figure}
 \includegraphics[width=\columnwidth]{images/zigzag_input.png}
 \includegraphics[width=\columnwidth]{images/zigzag_reconstruction.png}
-\caption{result of full algorithm running in simulation}
+\caption{A part of the input scene (top) and its reconstruction,
+moving the camera in a large triangle waveform pattern to the right.
+The area around the leftmost ball in the scene was used to initialize
+the map as described in [TODO: where do we describe this? - reference].}
 \label{fig:zigzag_reconstruction}
 \end{figure}
