--- a/report/sections/experiments.tex
+++ b/report/sections/experiments.tex
@@ -1,6 +1,7 @@
-Most of our experiments are based on the simulation described in section \ref{sec:simulation} as our code is not performant enough to handle
-the amount of events a real dynamic vision sensor generates and because the
-simulation makes comparisons with ground truth much easier.
+Most of our experiments are based on the simulation described in section
+\ref{sec:simulation} as our code is not performant enough to handle the amount
+of events a real dynamic vision sensor generates and because the simulation
+makes comparisons with ground truth much easier.
 
 There are a few things we looked into with the real DVS tough:
 
@@ -26,7 +27,7 @@ standard pinhole camera model.
 
 Unfortunately, the dynamic vision sensor only detects changes and cannot
 directly capture a calibration pattern. We could take pictures as described in
-the previous section, but for calibration there is an even better method \cite{mueggler2014events}: Use a
+the previous section, but for calibration there is an even better method \cite{mueggler2014event}: Use a
 computer screen to quickly show and hide the pattern. This is not only quicker
 and more convenient than removing a shutter, it also has the advantage of only
 showing the pattern and none of the surrounding scenery.
