--- a/report/sections/simulation.tex
+++ b/report/sections/simulation.tex
@@ -1,4 +1,4 @@
-In order to facilitate development we implmemented a full DVS simulator that
+In order to facilitate development we implemented a full DVS simulator that
 generates events from a spherical panorama.  This allows to develop and test
 each part of the algorithm independently with perfect input data and ground
 truth. It also makes experimentation easier as everything can be inspected at
