--- a/report/sections/results.tex
+++ b/report/sections/results.tex
@@ -1,9 +1,11 @@
+TODO: write some text here. Conclusion and stuff.
+
 \begin{figure}
 \includegraphics[width=\columnwidth]{images/zigzag_input.png}
 \includegraphics[width=\columnwidth]{images/zigzag_reconstruction.png}
 \caption{A part of the input scene (top) and its reconstruction,
 moving the camera in a large triangle waveform pattern to the right.
 The area around the leftmost ball in the scene was used to initialize
-the map as described in [TODO: where do we describe this? - reference].}
+the map as described in section \ref{sec:core_algorithm}.}
 \label{fig:zigzag_reconstruction}
 \end{figure}
