--- a/report/report.tex
+++ b/report/report.tex
@@ -27,7 +27,7 @@
 %-------------------------------------------------------------------------
 
 %%%%%%%%% TITLE
-\title{Image Reconstruction from DVS\\ The constant battle agains MATLAB\\ Student Project Report}
+\title{Image Reconstruction from DVS\\ The constant battle against MATLAB\\ Student Project Report}
 
 \author{Samuel Bryner\\
 ETH Zurich\\
