--- a/report/sections/results.tex
+++ b/report/sections/results.tex
@@ -1,5 +1,9 @@
 TODO: write some text here. Conclusion and stuff.
 
+- influence of the various parameters
+- code too slow for realtime, but not optimized at all
+- using Matlab for more than just a few hacked scripts: bad idea
+
 \begin{figure}
 \includegraphics[width=\columnwidth]{images/zigzag_input.png}
 \includegraphics[width=\columnwidth]{images/zigzag_reconstruction.png}
